--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -2,8 +2,8 @@
 <resources>
 
         <style name="RobotoTextViewStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-            <item name="android:textSize">20sp</item>
-            <item name="android:textColor">#fff</item>
+            <item name="android:textSize">25sp</item>
+            <item name="android:textColor">#000</item>
             <item name="android:textStyle">bold</item>
         </style>
     </resources>
