--- a/app/src/main/res/layout/activity_show_wallpepar_.xml
+++ b/app/src/main/res/layout/activity_show_wallpepar_.xml
@@ -9,29 +9,52 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <Button
+    <ImageButton
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_save"
-        android:text="SAVE"
-        android:backgroundTint="@color/White"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_margin="5dp"
+        android:background="@drawable/backarrowshade"/>
+
+        <ImageView
+            android:id="@+id/btn_share"
+            android:layout_width="75dp"
+            android:layout_height="70dp"
+            android:background="@drawable/sharebtn"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="50dp"
+            android:layout_marginLeft="60dp" />
+
+        <ImageButton
+            android:id="@+id/btn_fvrt"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/fillheart" />
+
+        <ImageButton
+            android:id="@+id/btn_download"
+            android:layout_width="75dp"
+            android:layout_height="70dp"
+            android:background="@drawable/savebtn"
+            android:layout_marginBottom="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp" />
 
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/ad_View"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         app:adSize="BANNER"
         app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
-
 
 
 </RelativeLayout>
