--- a/app/src/main/res/layout/category_itemlayout.xml
+++ b/app/src/main/res/layout/category_itemlayout.xml
@@ -1,55 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:paddingBottom="8dp">
 
 
     <ImageView
         android:id="@+id/catImage"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitXY"
-        android:tint="@color/colorPrimary" />
-
-<!--<de.hdodenhof.circleimageview.CircleImageView
-    android:id="@+id/catImage"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginTop="8dp"
-    android:layout_alignParentTop="true"
-    app:view_backgroundColor="@color/colorPrimary"
-    android:layout_alignParentLeft="true"
-    />-->
-
-    <TextView
-        android:id="@+id/catName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:layout_alignTop="@+id/catImage"
-        android:layout_toRightOf="@+id/catImage"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent"
-        android:layout_toEndOf="@+id/catImage" />
-
-    <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"
-        android:layout_below="@+id/catImage"
-        android:layout_alignLeft="@+id/catImage"
-        android:layout_marginTop="20dp" />
+        android:layout_height="120dp"
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY" />
 
+    <!--<de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/catImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentTop="true"
+        app:view_backgroundColor="@color/colorPrimary"
+        android:layout_alignParentLeft="true"
+        />-->
 
+    <!-- <TextView
+         android:id="@+id/catName"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Category"
+         android:layout_alignTop="@+id/catImage"
+         android:layout_toRightOf="@+id/catImage"
+         android:layout_marginLeft="30dp"
+         android:layout_marginTop="20dp"
+         android:textSize="16sp"
+         android:textStyle="bold"
+         android:textColor="@color/colorAccent"
+         android:layout_toEndOf="@+id/catImage" />-->
+    <!--
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary"
+            android:layout_below="@+id/catImage"
+            android:layout_alignLeft="@+id/catImage"
+            android:layout_marginTop="20dp" />-->
 
 
     <!--  <ImageView
