--- a/app/src/main/res/layout/nav_header_layout.xml
+++ b/app/src/main/res/layout/nav_header_layout.xml
@@ -5,20 +5,20 @@
     android:layout_height="190dp"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:background="@drawable/bgheader1"
+    android:background="@drawable/background1"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:src="@drawable/person" />
-
+            android:layout_gravity="center"
+            android:src="@drawable/logo" />
+<!--
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
             android:textStyle="bold"
             android:layout_marginLeft="90dp"
             android:layout_marginBottom="20dp"
-            android:text="WallPepar" />
+            android:text="WallPepar" />-->
     </LinearLayout>
 
 
