--- a/app/src/main/res/layout/activity_show_wallpepar_.xml
+++ b/app/src/main/res/layout/activity_show_wallpepar_.xml
@@ -16,35 +16,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/backarrowshade"/>
+        android:background="@drawable/backarrowshade" />
 
-        <ImageView
-            android:id="@+id/btn_share"
-            android:layout_width="75dp"
-            android:layout_height="70dp"
-            android:background="@drawable/sharebtn"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="50dp"
-            android:layout_marginLeft="60dp" />
+    <ImageView
+        android:id="@+id/btn_share"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="80dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/sharebtn" />
 
-        <ImageButton
-            android:id="@+id/btn_fvrt"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/fillheart" />
+    <!--   <ImageButton
+           android:button="@drawable/checkfavbtn"
+           android:id="@+id/btn_fvrt"
+           android:layout_width="90dp"
+           android:layout_height="90dp"
+           android:layout_alignParentBottom="true"
+           android:layout_centerHorizontal="true"
+           android:layout_marginBottom="50dp"
+        />-->
 
-        <ImageButton
-            android:id="@+id/btn_download"
-            android:layout_width="75dp"
-            android:layout_height="70dp"
-            android:background="@drawable/savebtn"
-            android:layout_marginBottom="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="60dp" />
+    <ImageView
+        android:id="@+id/btn_fvrt"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/blankheart"/>
+
+    <ImageButton
+        android:id="@+id/btn_download"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="80dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/savebtn" />
 
 
     <com.google.android.gms.ads.AdView
