--- a/app/src/main/res/layout/category_itemlayout.xml
+++ b/app/src/main/res/layout/category_itemlayout.xml
@@ -4,17 +4,16 @@
     android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:paddingBottom="8dp">
+  >
 
 
     <ImageView
         android:id="@+id/catImage"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:layout_margin="5dp"
-        android:layout_marginTop="10dp"
-        android:scaleType="fitXY" />
+       />
 
     <!--<de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/catImage"
