--- a/app/src/main/res/layout/activity_show_wallpepar_.xml
+++ b/app/src/main/res/layout/activity_show_wallpepar_.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".activity.ShowWallPepar_Activity">
 
     <androidx.viewpager.widget.ViewPager
@@ -11,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,15 +28,6 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/sharebtn" />
 
-    <!--   <ImageButton
-           android:button="@drawable/checkfavbtn"
-           android:id="@+id/btn_fvrt"
-           android:layout_width="90dp"
-           android:layout_height="90dp"
-           android:layout_alignParentBottom="true"
-           android:layout_centerHorizontal="true"
-           android:layout_marginBottom="50dp"
-        />-->
 
     <ImageView
         android:id="@+id/btn_fvrt"
@@ -46,7 +38,7 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/blankheart"/>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_download"
         android:layout_width="75dp"
         android:layout_height="70dp"
